--- a/DemoPrototype/MainPage.xaml
+++ b/DemoPrototype/MainPage.xaml
@@ -41,7 +41,8 @@
                        FontWeight="Bold"
                        Margin="10,25,0,0"
                        ></TextBlock>
-            <Image     Margin="5,0,0,0"
+            <Image     Visibility="Collapsed"
+                       Margin="5,0,0,0"
                        RelativePanel.RightOf="BackButton"
                        Height="48"
                        Width="48"
@@ -49,6 +50,14 @@
                        ></Image>
            
         </RelativePanel>
+        <!--  want logo to the right-->
+        <Image     Margin="5,0,5,0"
+                   HorizontalAlignment="Right"
+                       Height="48"
+                       Width="48"
+                       Source="Assets/Plastics_Unbound_logo_blue.png"
+                       ></Image>
+
         <SplitView Name="MySplitView" 
                    Grid.Row="1"
                    DisplayMode="CompactOverlay"
