--- a/DemoPrototype/OperatorPage.xaml
+++ b/DemoPrototype/OperatorPage.xaml
@@ -42,15 +42,17 @@
             <Border  Margin="5,5,5,5" Grid.Row="0" Grid.RowSpan="3" Grid.Column="0" Grid.ColumnSpan="2" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5">
                 <StackPanel Orientation="Vertical">
                     <TextBlock Margin="5,5,0,5" Grid.Row="0" Text="Operation" FontWeight="SemiBold" VerticalAlignment="Bottom"></TextBlock>
-                    <RelativePanel>
-                        <TextBlock Name="RMode" Margin="5,5,0,5"  Text="Running mode"  RelativePanel.AlignTopWithPanel="True"></TextBlock>
-                        <TextBlock Name="TTEmp"  Margin="5,15,0,18"  RelativePanel.Below="RMode" Text="Tool tempering" ></TextBlock>
-                        <ComboBox Margin="5,0,60,15" x:Name ="RunningModeCombo"  RelativePanel.AlignRightWithPanel="True" SelectionChanged="NewModeSelected"/>
-                        <TextBlock Margin="5,0,60,18" RelativePanel.Below="RunningModeCombo" RelativePanel.AlignRightWithPanel="True" Name="TextBlock_ToolTempering" Text="Not Yet Working" Foreground="Olive"></TextBlock>
-                    </RelativePanel>
+                    
+                                        
                 </StackPanel>
             </Border>
 
+ 
+                <TextBlock Name="RMode" Margin="10,5,0,5" Grid.Row="1"  Text="Running mode"  ></TextBlock>
+                <TextBlock Name="TTEmp"  Grid.Row="2" Margin="10,0,0,0"   Text="Tool tempering" ></TextBlock>
+                <ComboBox Margin="0,0,0,0" Grid.Row="1" Grid.Column="1" x:Name ="RunningModeCombo"   SelectionChanged="NewModeSelected"/>
+                <TextBlock Margin="0,0,0,0" Grid.Row="2" Grid.Column="1" Name="TextBlock_ToolTempering" Text="Not Yet Working" ></TextBlock>
+ 
 
 
             <Button Visibility="Collapsed" Grid.Row="1"  Grid.RowSpan="2" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Right" Name="Button_Freeze_Run" Content="Freeze" Click="Button_Freeze_Run_Click"></Button>
