--- a/DemoPrototype/TunePage.xaml
+++ b/DemoPrototype/TunePage.xaml
@@ -51,7 +51,7 @@
 
         <!--  Delay times -->
         <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2">
-            <TextBlock Margin="50,50,0,0" > Tempering delay time Feed-to-Return</TextBlock>
+            <TextBlock Margin="50,50,0,0" > Trip time Feed-to-Return (s)</TextBlock>
         </StackPanel>
 
         <TextBlock Margin="0,50,0,0" Grid.Row="0" Grid.Column="3"> Calibrate + Tune = Total</TextBlock>
